file(GLOB_RECURSE SOURCE_LIST "*.h*" "*.c*")
add_executable(typeinfogen ${SOURCE_LIST})
set_target_properties(typeinfogen PROPERTIES FOLDER "flame")
target_include_directories(typeinfogen PRIVATE "${VS_LOCATION}/DIA SDK/include")
target_link_libraries(typeinfogen flame_foundation)
target_link_libraries(typeinfogen "${VS_LOCATION}/DIA SDK/lib/amd64/diaguids.lib")
