file(GLOB_RECURSE SOURCES "*.h*" "*.c*")
add_executable(typeinfogen ${SOURCES})
set_target_properties(typeinfogen PROPERTIES FOLDER "flame")
target_include_directories(typeinfogen PRIVATE "${VS_LOCATION}/DIA SDK/include")
target_link_libraries(typeinfogen flame_foundation)
target_link_libraries(typeinfogen "${VS_LOCATION}/DIA SDK/lib/amd64/diaguids.lib")
add_custom_target(typeinfogen_dep)
set_target_properties(typeinfogen_dep PROPERTIES FOLDER "flame")
add_dependencies(typeinfogen_dep typeinfogen_dep)
add_custom_command(TARGET typeinfogen_dep POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_foundation> -d "${CMAKE_CURRENT_SOURCE_DIR}/../foundation/typeinfo.desc")
