file(GLOB source_files "*.h*" "*.c*")
add_executable(typeinfogen ${source_files})
set_target_properties(typeinfogen PROPERTIES FOLDER "flame")
target_compile_definitions(typeinfogen PRIVATE VS_LOCATION="${VS_LOCATION}")
target_include_directories(typeinfogen PRIVATE "${VS_LOCATION}/DIA SDK/include")
target_link_libraries(typeinfogen flame_foundation)
target_link_libraries(typeinfogen "${VS_LOCATION}/DIA SDK/lib/amd64/diaguids.lib")

add_custom_target(typeinfogen_dep)
set_target_properties(typeinfogen_dep PROPERTIES FOLDER "flame")
add_dependencies(typeinfogen_dep typeinfogen)
generate_typedesc(flame_foundation "enum starts_with flame::")
gen_typeinfo(typeinfogen_dep flame_foundation)
