file(GLOB_RECURSE source_files "*.c*" "*.asm")
add_executable(empty_test ${source_files})
set_target_properties(empty_test PROPERTIES FOLDER "tests")
target_link_options(empty_test PRIVATE /FIXED:NO)
target_link_libraries(empty_test flame_foundation)
add_custom_command(TARGET empty_test POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:empty_test> -u SomeClass)
